--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
   <div class="container">
-  	<nav class="navbar">
-  		<h1> Jordan Lapid </h1>
-  		<ul>
-  			<li> <a href="#"> About Me </a> </li>
-  			<li> <a href="#"> Portfolio </a> </li>
-  			<li> <a href="#"> Contact </a> </li>
+  	<nav>
+  		<ul class="ul-width">
+  			<li class ="navbar-left"> <a href="#"> Jordan Lapid </a> </li>
+  			<li class ="navbar-right"> <a href="#"> About Me </a> </li>
+  			<li class ="navbar-right"> <a href="#"> Portfolio </a> </li>
+  			<li class ="navbar-right"> <a href="#"> Contact </a> </li>
 		</ul>
 	</nav>
   </div>
