--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <div class="container">
-  	<nav>
+  	<nav class="navbar">
   		<ul class="ul-width">
   			<li class ="navbar-left"> <a href="#"> Jordan Lapid </a> </li>
   			<li class ="navbar-right"> <a href="#"> About Me </a> </li>
