--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="container-fluid">
   	<nav class="navbar container">
   		<ul class="ul-width">
-  			<li class ="navbar-left"> <a href="#"> Jordan Lapid </a> </li>
-  			<li class ="navbar-right"> <a href="#"> About Me </a> </li>
-  			<li class ="navbar-right"> <a href="#"> Portfolio </a> </li>
+  			<li class ="navbar-left name"> Jordan Lapid </li>
   			<li class ="navbar-right"> <a href="#"> Contact </a> </li>
+  			<li class ="navbar-right"> <a href="#"> Portfolio </a> </li>
+  			<li class ="navbar-right"> <a href="#"> About Me </a> </li>
 		</ul>
 	</nav>
   </div>
@@ -21,7 +21,9 @@
   		<div class="container">
   			<div class="aboutme">
   				<h1> About Me </h1>
-  					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices porttitor leo. Donec dignissim ac purus eget posuere. Donec auctor enim nec tempor congue. Aliquam mattis suscipit mollis. Mauris lectus est, ultrices id felis a, semper lacinia tortor. Sed fermentum efficitur felis, eu posuere tellus aliquam ut. Nullam eu magna in diam ornare interdum at sed nulla. Quisque faucibus tempus velit iaculis accumsan. Duis vel congue erat. Cras bibendum elementum magna ut scelerisque. In mollis condimentum blandit. Etiam eleifend metus nisl, sed dignissim dolor accumsan at. Donec egestas est in tincidunt malesuada.
+  				<hr>
+  					<img class="img-resize" src="assets/images/aboutme.png">
+  					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices porttitor leo. Donec dignissim ac purus eget posuere. Donec auctor enim nec tempor congue. Aliquam mattis suscipit mollis. Mauris lectus est, ultrices id felis a, semper lacinia tortor. Sed fermentum efficitur felis, eu posuere tellus aliquam ut. Nullam eu magna in diam ornare interdum at sed nulla. Quisque faucibus tempus velit iaculis accumsan. Duis vel congue erat. Cras bibendum elementum magna ut scelerisque. In mollis condimentum blandit. Etiam eleifend metus nisl, sed dignissim dolor accumsan at. Donec egestas est in tincidunt malesuada.
   					</p>
 					<p> Aenean sollicitudin hendrerit interdum. Ut quis pharetra risus. Curabitur interdum rutrum erat aliquam congue. Morbi felis ligula, lobortis a leo vitae, pulvinar ultrices ipsum. Morbi rutrum ut turpis et pellentesque. Quisque laoreet ante eu est mattis, in rutrum sapien hendrerit. Nullam convallis ut libero quis gravida. Cras nibh nibh, bibendum id metus et, rutrum tincidunt felis. Sed egestas auctor metus id auctor. Sed condimentum maximus ex, eget fringilla odio cursus at. Vivamus pharetra velit ipsum, in malesuada erat malesuada a. Quisque aliquet quis velit eu consectetur. Vivamus vehicula turpis sit amet blandit hendrerit. Aliquam non mauris id eros lobortis tempor a non ligula. 
 					</p>
@@ -31,12 +33,18 @@
 		<div class="container">
 			<div class="connect">
 				<h2> Connect with Me </h2>
+				<hr>
 					<img src="assets/images/github.png">
 					<img src="assets/images/linkedin.png">
 					<img src="assets/images/stackoverflow.png">
 			</div>
 		</div>
 	</div>
-  
+
   </body>
+  	<div class="container-fluid">
+   	<footer class="footer">
+ 		<p class="copyright"> © Copyright 2017 Jordan Lapid</p>
+ 	</footer>
+ 	</div>
 </html>
