--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   	<nav class="navbar container">
   		<ul class="ul-width">
   			<li class ="navbar-left name"> Jordan Lapid </li>
-  			<li class ="navbar-right"> <a href="#"> Contact </a> </li>
-  			<li class ="navbar-right"> <a href="#"> Portfolio </a> </li>
-  			<li class ="navbar-right"> <a href="#"> About Me </a> </li>
+  			<li class ="navbar-right"> <a href="contact.html"> Contact </a> </li>
+  			<li class ="navbar-right"> <a href="portfolio.html"> Portfolio </a> </li>
+  			<li class ="navbar-right"> <a href="index.html"> About Me </a> </li>
 		</ul>
 	</nav>
   </div>
@@ -23,11 +23,11 @@
   				<h1> About Me </h1>
   				<hr>
   					<img class="img-resize" src="assets/images/profile.png">
-  					<p> 29/M/Chula Vista </p> 
-  					<p> My name is Jordan Lapid, but you can call me j-dawg. </p>
-  					<p>	I'm looking to become a web dev, and maybe start a blog. </p>
-  					<p> The best things in life are burritos, burgers, and brew. </p>
-  					<p> And my favorite color is blue. </p>
+  					<p> My name is Jordan Lapid, I live in America's Finest City. </p> 
+  					<p> Where the burritos are bomb and the beaches are pretty. </p> 
+  					<p>	I enjoy learning web dev, eating burgers, and drinkin brew. </p>
+  					<p> Hiking, biking, and gaming is cool too. </p>
+  					<p class="clear"> And my favorite color is <span style="color:blue"> blue. </span> </p>
 			</div>
 		</div>
 
@@ -35,9 +35,9 @@
 			<div class="connect">
 				<h2> Connect with Me </h2>
 				<hr>
-					<img src="assets/images/github.png">
-					<img src="assets/images/linkedin.png">
-					<img src="assets/images/stackoverflow.png">
+					<a href="https://github.com/jordanlapid"> <img src="assets/images/github.png"> </a>
+					<a href="https://www.linkedin.com/in/jordan-lapid-56304b80/"> <img src="assets/images/linkedin.png"> </a>
+					<a href="https://stackoverflow.com/users/8409519/madgc8	"> <img src="assets/images/stackoverflow.png"> </a>
 			</div>
 		</div>
 	</div>
