--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
   <div class="container-fluid">
   	<nav class="navbar container">
-  		<ul class="ul-width">
+  		<ul>
   			<li class ="navbar-left name"> Jordan Lapid </li>
   			<li class ="navbar-right"> <a href="contact.html"> Contact </a> </li>
   			<li class ="navbar-right"> <a href="portfolio.html"> Portfolio </a> </li>
@@ -23,9 +23,9 @@
   				<h1> About Me </h1>
   				<hr>
   					<img class="img-resize" src="assets/images/profile.png">
-  					<p> My name is Jordan Lapid, I live in America's Finest City. </p> 
+  					<p> My name is Jordan Lapid, born and raised in America's Finest City. </p> 
   					<p> Where the burritos are bomb and the beaches are pretty. </p> 
-  					<p>	I enjoy learning web dev, eating burgers, and drinkin brew. </p>
+  					<p>	I enjoy learning web dev, grillin burgers, and drinkin brew. </p>
   					<p> Hiking, biking, and gaming is cool too. </p>
   					<p class="clear"> And my favorite color is <span style="color:blue"> blue. </span> </p>
 			</div>
