--- a/portfolio.html
+++ b/portfolio.html
@@ -20,15 +20,15 @@
   	<div class="container-fluid">
   		<div class="container">
   			<div class="aboutme">
-  				<h1> About Me </h1>
+  				<h1> Portfolio </h1>
   				<hr>
-  					<img class="img-resize" src="assets/images/profile.png">
-  					<p> 29/M/Chula Vista </p> 
-  					<p> My name is Jordan Lapid, but you can call me j-dawg. </p>
-  					<p>	I'm looking to become a web dev, and maybe start a blog. </p>
-  					<p> The best things in life are burritos, burgers, and brew. </p>
-            <p> Hiking, biking, and gaming is cool too. </p>
-  					<p> And my favorite color is blue. </p>
+            <div id="images">
+                <img class="block" src="assets/images/portfolio1.jpg">
+                <img class="block" src="assets/images/portfolio2.jpg">
+                <img class="block" src="assets/images/portfolio3.jpg">
+                <img class="block" src="assets/images/portfolio4.jpg">
+                <img class="block" src="assets/images/portfolio5.jpg">
+            </div>
 			</div>
 		</div>
 
@@ -45,7 +45,7 @@
 
   </body>
   	<div class="container-fluid">
-   	<footer class="footer">
+   	<footer class="footer2">
  		<p class="copyright"> © Copyright 2017 Jordan Lapid</p>
  	</footer>
  	</div>
