--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
 <meta name="author" content="GoloThemes">
 <meta name="description" content="ENGAGE v1.0. Responsive One Page Theme.">
 <meta name="keywords" content="ENGAGE v1.0, responsive, one page, portfolio, parallax, template, html5">
-<!-- Open Graph Meta Data -->
-<meta property="og:description" content="ENGAGE v1.0. Responsive One Page Theme.">
-<meta property="og:image" content="http://www.golothemes.com/demo/tiara/preview_image.png">
-<meta property="og:site_name" content="ENGAGE v1.0">
-<meta property="og:title" content="ENGAGE v1.0">
-<meta property="og:type" content="website">
-<meta property="og:url" content="http://www.golothemes.com/">
 <!--Favicon-->
 <link rel="shortcut icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
 <link rel="shortcut icon" href="images/favicons/favicon-16x16.ico" type="image/x-icon"/>
@@ -29,8 +22,8 @@
 <!--Framework Styles-->
 <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" />
 <!--Fonts Styles-->
-<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,600,700,800' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700,800' rel='stylesheet' type='text/css'>
 <!--Icons Styles-->
 <link rel="stylesheet" href="css/icons/font-awesome.min.css" type="text/css" />
 <link rel="stylesheet" href="css/icons/ionicons.min.css" type="text/css" />
