--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 
 <!-- scripts
           –––––––––––––––––––––––––––––––––––––––––––––––––– --> 
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> 
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script> 
 <script type="text/javascript" src="js/plugins/plugin.js"></script> 
 <script type="text/javascript" src="js/custom.js"></script> 
 
