--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 <meta charset="utf-8" />
-<title><title>Jordan Lapid - Web Developer</title></title>
-<!-- Core Meta Data -->
-<meta name="author" content="GoloThemes">
-<meta name="description" content="ENGAGE v1.0. Responsive One Page Theme.">
-<meta name="keywords" content="ENGAGE v1.0, responsive, one page, portfolio, parallax, template, html5">
+<title>Jordan Lapid</title>
 <!--Favicon-->
 <link rel="shortcut icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
 <link rel="shortcut icon" href="images/favicons/favicon-16x16.ico" type="image/x-icon"/>
@@ -76,13 +72,13 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span></span> <span></span> <span></span> </button>
           <!-- <a class="navbar-brand overlay-header-logo" href="#home"> <img src="images/logo/logo.png" alt="logo" role="banner"></a>  -->
-          <a class="navbar-brand normal-header-logo" href="#home"> <img src="images/logo/logo-black.png" alt="logo" role="banner"></a> </div>
+          <!-- <a class="navbar-brand normal-header-logo" href="#home"> <img src="images/logo/logo-black.png" alt="logo" role="banner"></a>  -->
+        </div>
         <div class="collapse navbar-collapse navbar-right" id="navigation-menu">
           <ul class="nav navbar-nav">
             <li class="active home"><a href="#home">Home</a></li>
             <li><a href="#about-us">About</a></li>
             <li><a href="#portfolio">Work</a></li>
-            <li><a href="#services">What I Do </a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -105,10 +101,11 @@
         <div class="row">
           <div class="col-lg-8 col-md-8 col-md-offset-2">
             <div class="mainBanner-content text-center text-uppercase">
-              <p>HELLO, I AM</p>
-              <h1>John Deo</h1>
-              <p><span>A Freelance</span> <span id="js-rotating" data-animation="rotateInDownLeft">Designer, Developer, Consultant, Artist</span> </p>
-              <a href="#about-us" class="btn-bdr move marT50">GET TO KNOW MORE</a> <span class="downArrow"><img src="images/others/down-arrow.png" alt="down arrow"></span> </div>
+              <h1>Jordan Lapid</h1>
+              <!-- <p><span>A Freelance</span> <span id="js-rotating" data-animation="rotateInDownLeft">Designer, Developer, Consultant, Artist</span> </p> -->
+              <p>Web Developer</p>
+              <a href="#about-us" class="btn-bdr move marT50">About Me</a>
+              <a href="#portfolio" class="btn-bdr move marT50">Portfolio</a></div>
           </div>
         </div>
       </div>
