--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
               <div class="parallax-overlay bg-strip"></div>
               <div class="address-block">
                 <address>
-                <p class="text-uppercase">245 Quigley Bld, Ste </p>
-                <p class="text-uppercase"><a href="mailto:help@golothemes.com">help@golothemes.com</a></p>
-                <p class="text-uppercase">+61 3 8376 6284 </p>
+                <p class="text-uppercase">San Diego, CA</p>
+                <p class="text-uppercase"><a href="mailto:help@golothemes.com">jordanlapid@gmail.com</a></p>
+                <p class="text-uppercase">619 254 8447</p>
                 </address>
               </div>
             </div>
