--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="ip-header">
   <div class="ip-logo"> <img class="preloaderLogo center-block" src="images/logo/logo-black.png" alt="preloader"> </div>
   <div class="ip-loader"> <svg class="ip-inner" width="60px" height="60px" viewBox="0 0 80 80">
-    <path class="ip-loader-circlebg" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
+    <path class="ip-loader-circlebg center-block" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
     <path id="ip-loader-circle" class="ip-loader-circle" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
     </svg> </div>
 </div>
@@ -123,7 +123,7 @@
               <div class="title-style-3">
                 <h2 class="text-uppercase"> About</h2>
                 <span class="title-spt"></span> </div>
-              <p>Hello, I am John Deo, A freelance graphic designer. Nece pellenesque nullreet etuis non quam orci sagittis portti torlum nisl metus.</p>
+              <p>Hello, I am Jordan Lapid, A freelance graphic designer. Nece pellenesque nullreet etuis non quam orci sagittis portti torlum nisl metus.</p>
             </div>
             <!--/ Section Title--> 
             <!--Progress bar-->
@@ -391,9 +391,6 @@
 <footer class="clearfix bgColor1" id="page_footer">
   <div class="container text-center">
     <div class="row"> 
-      <!--Footer Copy-->
-      <h5 class="copyright text-uppercase">COPYRIGHTS &copy; 2014 DESIGN BY <a target="_blank" href="http://golothemes.com">GoloThemes</a>.</h5>
-      <!--/ Footer Copy--> 
       <!--Footer Social Icon-->
       <ul class="footer-socials clearfix">
         <li><a href="#" class="foo_social"><i class="fa fa-facebook"></i></a></li>
