--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
               <!-- <p><span>A Freelance</span> <span id="js-rotating" data-animation="rotateInDownLeft">Designer, Developer, Consultant, Artist</span> </p> -->
               <p>Web Developer</p>
               <a href="#about-us" class="btn-bdr move marT50">About Me</a>
-              <a href="#portfolio" class="btn-bdr move marT50">Portfolio</a></div>
+              <a href="#portfolio" class="btn-bdr move marT50">Portfolio</a>
+            </div>
           </div>
         </div>
       </div>
@@ -123,7 +124,8 @@
               <div class="title-style-3">
                 <h2 class="text-uppercase"> About</h2>
                 <span class="title-spt"></span> </div>
-              <p>Hello, I am Jordan Lapid, A freelance graphic designer. Nece pellenesque nullreet etuis non quam orci sagittis portti torlum nisl metus.</p>
+              <p>Hello, I am Jordan Lapid, A freelance graphic designer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu ultrices nibh. Suspendisse viverra convallis mauris, eget imperdiet nibh egestas nec. Aenean semper ipsum nisi, in mattis mauris hendrerit id. Fusce nulla urna, porta vel imperdiet a, rhoncus ut dolor. Sed fermentum felis non ex molestie blandit.</p>
+              <a href="#portfolio" class="btn-bdr move marT50">Resume</a>
             </div>
             <!--/ Section Title--> 
             <!--Progress bar-->
@@ -202,7 +204,7 @@
               <!--/ Project 1--> 
               <!--Project 2-->
               <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-image-slider.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/2.jpg" alt=""> </div>
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
@@ -215,7 +217,7 @@
               <!--/ Project 2--> 
               <!--Project 3-->
               <div class="cbp-item identity web-design">  <a href="ajax/ajax-page-single-video.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/3.jpg" alt=""> </div>
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
