--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul class="nav navbar-nav">
             <li class="active home"><a href="#home">Home</a></li>
             <li><a href="#about-us">About</a></li>
-            <li><a href="#portfolio">Work</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -125,7 +125,7 @@
                 <h2 class="text-uppercase"> About</h2>
                 <span class="title-spt"></span> </div>
               <p>Hello, I am Jordan Lapid, A freelance graphic designer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu ultrices nibh. Suspendisse viverra convallis mauris, eget imperdiet nibh egestas nec. Aenean semper ipsum nisi, in mattis mauris hendrerit id. Fusce nulla urna, porta vel imperdiet a, rhoncus ut dolor. Sed fermentum felis non ex molestie blandit.</p>
-              <a href="#portfolio" class="btn-bdr move marT50">Resume</a>
+              <a href="https://github.com/jordanlapid/jordanlapid.github.io/raw/master/resume/resume.pdf" class="btn btn-dark">My Resume</a>
             </div>
             <!--/ Section Title--> 
             <!--Progress bar-->
@@ -173,7 +173,7 @@
             <!--Section Title-->
             <div class="heading wow fadeIn" data-wow-delay=".2s" data-wow-duration="1s">
               <div class="title-style-3">
-                <h2 class="text-uppercase"> Work</h2>
+                <h2 class="text-uppercase"> Portfolio</h2>
                 <span class="title-spt"></span> </div>
             </div>
             <!--/Section Title--> 
@@ -204,7 +204,7 @@
               <!--/ Project 1--> 
               <!--Project 2-->
               <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-image-slider.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/2.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
@@ -217,7 +217,7 @@
               <!--/ Project 2--> 
               <!--Project 3-->
               <div class="cbp-item identity web-design">  <a href="ajax/ajax-page-single-video.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/3.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
@@ -309,7 +309,7 @@
             </div>
             <!--/Section Title-->
             <div class="col-md-8" id="contact-form">
-              <form action="php/contact.php" method="post" id="contactform" class="contact-form-portfolio clearfix clearfix">
+              <form action="https://formspree.io/jordanlapid@gmail.com" method="POST" id="contactform" class="contact-form-portfolio clearfix clearfix">
                 <div class="clearfix"> 
                   <!--Input Field-->
                   <div class="col-md-6">
