updates to index.html

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                   <h2 class="text-uppercase">Contact</h2>
                   <span class="title-spt"></span> </div>
               </div>
-              <p class="subHeading"> We are nec pellentesque nulla laoreet etuis non aliquam.</p>
+              <p class="subHeading">Connect with me!</p>
             </div>
             <!--/Section Title-->
             <div class="col-md-8" id="contact-form">
@@ -395,11 +395,9 @@
     <div class="row"> 
       <!--Footer Social Icon-->
       <ul class="footer-socials clearfix">
-        <li><a href="#" class="foo_social"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#" class="foo_social"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#" class="foo_social"><i class="fa fa-google-plus"></i></a></li>
-        <li><a href="#" class="foo_social"><i class="fa fa-behance"></i></a></li>
-        <li><a href="#" class="foo_social"><i class="fa fa-pinterest"></i></a></li>
+        <li><a href="https://github.com/jordanlapid" class="foo_social"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/jordan-lapid-56304b80/" class="foo_social"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://www.facebook.com/jordan.lapid" class="foo_social"><i class="fa fa-facebook"></i></a></li>
       </ul>
       <!--/ Footer Social Icon--> 
     </div>
