updated about me

--- a/index.html
+++ b/index.html
@@ -124,12 +124,16 @@
               <div class="title-style-3">
                 <h2 class="text-uppercase"> About</h2>
                 <span class="title-spt"></span> </div>
-              <p>Hello, I am Jordan Lapid, A freelance graphic designer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu ultrices nibh. Suspendisse viverra convallis mauris, eget imperdiet nibh egestas nec. Aenean semper ipsum nisi, in mattis mauris hendrerit id. Fusce nulla urna, porta vel imperdiet a, rhoncus ut dolor. Sed fermentum felis non ex molestie blandit.</p>
+              <p>Hi, my name is Jordan. I’m full stack web developer who enjoys building products and applications while feeding my appetite for creativity.  I have 5 years of professional experience in finance, and 8 years in managing a small business, where I have developed experience that I can transition into tech such as: the ability to analyze and create solutions, make decisions, collaborate with others, and manage projects.</p>
+              
+              <p>I’ve built applications using the following technologies: HTML, CSS, AJAX, RESTful APIs, Javascript, React, Bootstrap, Materialize, Node.js, Express.js, MongoDB, mySQL, Sequelize, and Firebase. I have a passion for creating and manipulating code, and I’m excited to utilize my current skill set and the skills that I’ve gained as a developer to continue learning and become an asset in the field.
+              </p>
+              </br>
               <a href="https://github.com/jordanlapid/jordanlapid.github.io/raw/master/resume/resume.pdf" class="btn btn-dark">My Resume</a>
             </div>
             <!--/ Section Title--> 
             <!--Progress bar-->
-            <div class="col-sm-11">
+            <!-- <div class="col-sm-11">
               <div class="progress-wrapper marT50 wow fadeIn" data-wow-delay=".2s" data-wow-duration="1s">
                 <h5>I AM GOOD AT</h5>
                 <div class="skills marT50">
@@ -152,7 +156,7 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!--/ Progress bar--> 
           </div>
         </div>
@@ -374,6 +378,7 @@
               <div class="parallax-overlay bg-strip"></div>
               <div class="address-block">
                 <address>
+                <p class="text-uppercase">Jordan Lapid</p>
                 <p class="text-uppercase">San Diego, CA</p>
                 <p class="text-uppercase"><a href="mailto:help@golothemes.com">jordanlapid@gmail.com</a></p>
                 <p class="text-uppercase">619 254 8447</p>
