--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </div>
           <div class="col-md-12"> 
             <!--Grid Container-->
-            <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-black.png"> 
+            <!-- <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-black.png">  -->
               <!--Project 1-->
               <div class="cbp-item graphic identity"> <a href="ajax/ajax-page-single-image.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
