updates to the portfolio

--- a/ajax/ajax-page-image-slider.html
+++ b/ajax/ajax-page-image-slider.html
@@ -31,7 +31,7 @@
         <a href="http://golothemes.com/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">visit the site</a>
     </div>
 </div>
-
+<!-- 
 <div class="cbp-l-project-container">
     <div class="cbp-l-project-related">
         <div class="cbp-l-project-desc-title"><span>Related Projects</span></div>
@@ -58,7 +58,7 @@
         </ul>
 
     </div>
-</div>
+</div> -->
 
 <br>
 <br>
