--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="col-lg-8 col-md-8 col-md-offset-2">
             <div class="mainBanner-content text-center text-uppercase">
               <h1>Jordan Lapid</h1>
-              <!-- <p><span>A Freelance</span> <span id="js-rotating" data-animation="rotateInDownLeft">Designer, Developer, Consultant, Artist</span> </p> -->
+              <!-- <p> <span id="js-rotating" data-animation="rotateInDownLeft">Full Stack, Web, Software, Javascript</span><span> Developer</span> </p> -->
               <p>Web Developer</p>
               <a href="#about-us" class="btn-bdr move marT50">About Me</a>
               <a href="#portfolio" class="btn-bdr move marT50">Portfolio</a>
@@ -309,7 +309,7 @@
                   <h2 class="text-uppercase">Contact</h2>
                   <span class="title-spt"></span> </div>
               </div>
-              <p class="subHeading">Connect with me!</p>
+              <!-- <p class="subHeading">Connect with me!</p> -->
             </div>
             <!--/Section Title-->
             <div class="col-md-8" id="contact-form">
