--- a/ajax/ajax-page-image-slider.html
+++ b/ajax/ajax-page-image-slider.html
@@ -4,31 +4,27 @@
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/big/2.jpg" alt="img">
+            <img src="ajax/portfolio/streetfighter/1.jpg" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-             <img src="ajax/big/3.jpg" alt="">
-        </li>
-        <li class="cbp-slider-item">
-            <img src="ajax/big/4.jpg" alt="">
+            <img src="ajax/portfolio/streetfighter/2.jpg" alt="img"> 
         </li>
     </ul>
 </div>
 
 <div class="cbp-l-project-container">
     <div class="cbp-l-project-desc">
-        <div class="cbp-l-project-desc-title"><span>Project Description</span></div>
-        <div class="cbp-l-project-desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, cumque, earum blanditiis incidunt minus commodi consequatur provident quae. Nihil, alias, vel consequatur ab aliquam aspernatur optio harum facilis excepturi mollitia autem voluptas cum ex veniam numquam quia repudiandae in iure. Assumenda, vel provident molestiae perferendis officia commodi asperiores earum sapiente inventore quam deleniti mollitia consequatur expedita quaerat natus praesentium beatae aut ipsa non ex ullam atque suscipit ut dignissimos magnam!</div>
+        <div class="cbp-l-project-desc-title"><span>Description</span></div>
+        <div class="cbp-l-project-desc-text">A “Street Fighter” themed RPG browser game. The player selects a character, selects an opponent, then clicks the fight button. Life totals are decremented randomly.  If the player defeats the opponent, the player selects a new opponent. Defeat all other opponents to win!</div>
     </div>
     <div class="cbp-l-project-details">
-        <div class="cbp-l-project-details-title"><span>Project Details</span></div>
+        <div class="cbp-l-project-details-title"><span>Details</span></div>
 
         <ul class="cbp-l-project-details-list">
-            <li><strong>Client</strong>John Doe</li>
-            <li><strong>Date</strong>22 December 2013</li>
-            <li><strong>Categories</strong>Logo, Graphic</li>
+            <li><strong>Technologies</strong>HTML, CSS, Javascript, jQuery</li>
+            <li><strong>Date Created</strong>October 2017</li>
         </ul>
-        <a href="http://golothemes.com/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">visit the site</a>
+        <a href="https://jordanlapid.github.io/Street-Fighter-RPG/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
     </div>
 </div>
 <!-- 
