--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
             <!--Grid Container-->
             <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-white.png"> 
               <!--Project 1-->
-              <div class="cbp-item graphic identity"> <a href="ajax/ajax-page-single-image.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-image-slider.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Soul Digital</div>
-                      <div class="cbp-l-caption-desc">Ajax Page Single Image</div>
+                      <div class="cbp-l-caption-title">Street Fighter RPG</div>
+                      <div class="cbp-l-caption-desc">A Game in jQuery</div>
                     </div>
                   </div>
                 </div>
