fixing pictures on project page

--- a/ajax/ajax-page-image-slider.html
+++ b/ajax/ajax-page-image-slider.html
@@ -4,10 +4,10 @@
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/streetfighter/1.png" alt="img"> 
+            <img src="portfolio/streetfighter/1.PNG" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/streetfighter/2.png" alt="img"> 
+            <img src="portfolio/streetfighter/2.PNG" alt="img"> 
         </li>
     </ul>
 </div>
