changes to slider page

--- a/ajax/ajax-page-image-slider.html
+++ b/ajax/ajax-page-image-slider.html
@@ -1,5 +1,5 @@
-<div class="cbp-l-project-title">Slider</div>
-<div class="cbp-l-project-subtitle">by Paul Flavius Nechita</div>
+<div class="cbp-l-project-title">Street Fighter RPG</div>
+<div class="cbp-l-project-subtitle">A Game in jQuery</div>
 
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
