--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <!--Grid Container-->
             <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-white.png"> 
               <!--Project 1-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-image-slider.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio1.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -207,13 +207,13 @@
                 </a> </div>
               <!--/ Project 1--> 
               <!--Project 2-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-image-slider.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio2.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/2.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">JJ Royal</div>
-                      <div class="cbp-l-caption-desc">Ajax Page Slider</div>
+                      <div class="cbp-l-caption-title">maxVal</div>
+                      <div class="cbp-l-caption-desc">Full Stack MERN Application</div>
                     </div>
                   </div>
                 </div>
