--- a/ajax/portfolio2.html
+++ b/ajax/portfolio2.html
@@ -9,6 +9,9 @@
         <li class="cbp-slider-item">
             <img src="ajax/portfolio/maxval/2.PNG" alt="img"> 
         </li>
+        <li class="cbp-slider-item">
+            <img src="ajax/portfolio/maxval/3.PNG" alt="img"> 
+        </li>
     </ul>
 </div>
 
@@ -16,7 +19,8 @@
     <div class="cbp-l-project-desc">
         <div class="cbp-l-project-desc-title"><span>Description</span></div>
         <div class="cbp-l-project-desc-text"> 
-            <p>A premier crowdsourced product valuation application for modern market research. maXval enables individuals and companies of any size to quickly evaluate their products in a simple and approachable platform. Users are able to upload photos of their products, which are then rated based on other user's input. The ratings are stored in the database and are used to populate the product dashboard.</p> 
+            <p>A premier crowdsourced product valuation application for modern market research. maXval enables individuals and companies of any size to quickly evaluate their products in a simple and approachable platform. </p>
+            <p>Users are able to upload photos of their products, which are then rated based on other user's input. The ratings are stored in the database and are used to populate the product dashboard.</p> 
             <p>This application was designed using React.js on the front-end and MongoDB, node.js, and express.js on the back-end.  The user authentication was built using Firebase, and charts.js was utilized to create the data visualization.</p>  
         </div>
     </div>
