adding portfolio items

--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
                 </a> </div>
               <!--/ Project 6--> 
               <!--Project 7-->
-              <div class="cbp-item identity web-design"> <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/4900333&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" class="cbp-caption cbp-lightbox">
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Chocolate Milkshake</div>
-                      <div class="cbp-l-caption-desc">Light Box Sound</div>
+                      <div class="cbp-l-caption-title">Beer-Ner</div>
+                      <div class="cbp-l-caption-desc">Choose your Booze</div>
                     </div>
                   </div>
                 </div>
