--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
             </div>
             <!--/Section Title--> 
           </div>
-          <div class="col-md-6 wow fadeInUp" data-wow-delay=".5s" data-wow-duration=".7s">
+          <!-- <div class="col-md-6 wow fadeInUp" data-wow-delay=".5s" data-wow-duration=".7s">
             <div id="filters-container" class="cbp-l-filters-alignRight filters-2">
               <div data-filter="*" class="cbp-filter-item-active cbp-filter-item"> All </div>
               <div data-filter=".identity" class="cbp-filter-item"> identity </div>
               <div data-filter=".web-design" class="cbp-filter-item"> Web Design </div>
               <div data-filter=".graphic" class="cbp-filter-item"> Graphic </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-12"> 
             <!--Grid Container-->
             <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-white.png"> 
@@ -246,13 +246,13 @@
                 </a> </div>
               <!--/ Project 4--> 
               <!--Project 5-->
-              <div class="cbp-item identity web-design"> <a href="ajax/big/5-big.jpg" class="cbp-caption cbp-lightbox">
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio5.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/5.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Willowtree</div>
-                      <div class="cbp-l-caption-desc">Light Box Image</div>
+                      <div class="cbp-l-caption-title">Bamazon</div>
+                      <div class="cbp-l-caption-desc">Node.js/MySQL CLI Application</div>
                     </div>
                   </div>
                 </div>
@@ -287,7 +287,7 @@
             </div>
             
             <!--Load more-->
-            <div class="cbp-l-loadMore-button"> <a class="cbp-l-loadMore-button-link btn btn-dark" href="ajax/loadMore-3.html"> <span class="cbp-l-loadMore-button-defaultText">LOAD MORE</span> <span class="cbp-l-loadMore-button-loadingText">LOADING...</span> <span class="cbp-l-loadMore-button-noMoreLoading">NO MORE WORKS</span> </a> </div>
+            <!-- <div class="cbp-l-loadMore-button"> <a class="cbp-l-loadMore-button-link btn btn-dark" href="ajax/loadMore-3.html"> <span class="cbp-l-loadMore-button-defaultText">LOAD MORE</span> <span class="cbp-l-loadMore-button-loadingText">LOADING...</span> <span class="cbp-l-loadMore-button-noMoreLoading">NO MORE WORKS</span> </a> </div> -->
             <!--/ Load more--> 
           </div>
         </div>
