updating portfolio photos

--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
                 </a> </div>
               <!--/ Project 5--> 
               <!--Project 6-->
-              <div class="cbp-item graphic web-design"> <a href="http://vimeo.com/14912890" class="cbp-caption cbp-lightbox">
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio6.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/6.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Toy House</div>
-                      <div class="cbp-l-caption-desc">Light Box Video</div>
+                      <div class="cbp-l-caption-title">Nick Trivia</div>
+                      <div class="cbp-l-caption-desc">Mobile Responsive Trivia Game</div>
                     </div>
                   </div>
                 </div>
@@ -284,10 +284,36 @@
                 </div>
                 </a> </div>
               <!--/ Project 7--> 
+              <!--Project 8-->
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
+                <div class="cbp-caption-activeWrap">
+                  <div class="cbp-l-caption-alignLeft">
+                    <div class="cbp-l-caption-body">
+                      <div class="cbp-l-caption-title">Beer-Ner</div>
+                      <div class="cbp-l-caption-desc">Choose your Booze</div>
+                    </div>
+                  </div>
+                </div>
+                </a> </div>
+              <!--/ Project 8--> 
+              <!--Project 9-->
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
+                <div class="cbp-caption-activeWrap">
+                  <div class="cbp-l-caption-alignLeft">
+                    <div class="cbp-l-caption-body">
+                      <div class="cbp-l-caption-title">Beer-Ner</div>
+                      <div class="cbp-l-caption-desc">Choose your Booze</div>
+                    </div>
+                  </div>
+                </div>
+                </a> </div>
+              <!--/ Project 9--> 
             </div>
             
             <!--Load more-->
-            <!-- <div class="cbp-l-loadMore-button"> <a class="cbp-l-loadMore-button-link btn btn-dark" href="ajax/loadMore-3.html"> <span class="cbp-l-loadMore-button-defaultText">LOAD MORE</span> <span class="cbp-l-loadMore-button-loadingText">LOADING...</span> <span class="cbp-l-loadMore-button-noMoreLoading">NO MORE WORKS</span> </a> </div> -->
+            <div class="cbp-l-loadMore-button"> <a class="cbp-l-loadMore-button-link btn btn-dark" href="ajax/loadMore-3.html"> <span class="cbp-l-loadMore-button-defaultText">LOAD MORE</span> <span class="cbp-l-loadMore-button-loadingText">LOADING...</span> <span class="cbp-l-loadMore-button-noMoreLoading">NO MORE WORKS</span> </a> </div>
             <!--/ Load more--> 
           </div>
         </div>
