--- a/index.html
+++ b/index.html
@@ -220,26 +220,26 @@
                 </a> </div>
               <!--/ Project 2--> 
               <!--Project 3-->
-              <div class="cbp-item identity web-design">  <a href="ajax/ajax-page-single-video.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio3.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/3.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Yolo Glass</div>
-                      <div class="cbp-l-caption-desc">Ajax Page Video</div>
+                      <div class="cbp-l-caption-title">Giphy Gifs</div>
+                      <div class="cbp-l-caption-desc">Bootstrap/Giphy API Web Application</div>
                     </div>
                   </div>
                 </div>
                 </a> </div>
               <!--/ Project 3--> 
               <!--Project 4-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-single-sound.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio4.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/4.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Energy Drink</div>
-                      <div class="cbp-l-caption-desc">Ajax Page Sound</div>
+                      <div class="cbp-l-caption-title">Clicky Game</div>
+                      <div class="cbp-l-caption-desc">A Memorization Game in React</div>
                     </div>
                   </div>
                 </div>
@@ -251,8 +251,8 @@
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Bamazon</div>
-                      <div class="cbp-l-caption-desc">Node.js/MySQL CLI Application</div>
+                      <div class="cbp-l-caption-title">The Bucket List</div>
+                      <div class="cbp-l-caption-desc">Full Stack Web Application</div>
                     </div>
                   </div>
                 </div>
@@ -277,16 +277,16 @@
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Beer-Ner</div>
-                      <div class="cbp-l-caption-desc">Choose your Booze</div>
+                      <div class="cbp-l-caption-title">Hangman</div>
+                      <div class="cbp-l-caption-desc">Game of Thrones Style!</div>
                     </div>
                   </div>
                 </div>
                 </a> </div>
               <!--/ Project 7--> 
               <!--Project 8-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
+              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/8.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
@@ -298,17 +298,17 @@
                 </a> </div>
               <!--/ Project 8--> 
               <!--Project 9-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
-                <div class="cbp-caption-activeWrap">
-                  <div class="cbp-l-caption-alignLeft">
-                    <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Beer-Ner</div>
-                      <div class="cbp-l-caption-desc">Choose your Booze</div>
+                <div class="cbp-item graphic web-design"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
+                  <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/9.jpg" alt=""> </div>
+                  <div class="cbp-caption-activeWrap">
+                    <div class="cbp-l-caption-alignLeft">
+                      <div class="cbp-l-caption-body">
+                        <div class="cbp-l-caption-title">Bamazon</div>
+                        <div class="cbp-l-caption-desc">Node.js/MySQL CLI Application</div>
+                      </div>
                     </div>
                   </div>
-                </div>
-                </a> </div>
+                  </a> </div>                
               <!--/ Project 9--> 
             </div>
             
