--- a/index.html
+++ b/index.html
@@ -182,19 +182,18 @@
             </div>
             <!--/Section Title--> 
           </div>
-          <!-- <div class="col-md-6 wow fadeInUp" data-wow-delay=".5s" data-wow-duration=".7s">
+          <div class="col-md-6 wow fadeInUp" data-wow-delay=".5s" data-wow-duration=".7s">
             <div id="filters-container" class="cbp-l-filters-alignRight filters-2">
               <div data-filter="*" class="cbp-filter-item-active cbp-filter-item"> All </div>
-              <div data-filter=".identity" class="cbp-filter-item"> identity </div>
-              <div data-filter=".web-design" class="cbp-filter-item"> Web Design </div>
-              <div data-filter=".graphic" class="cbp-filter-item"> Graphic </div>
+              <div data-filter=".game" class="cbp-filter-item"> Game </div>
+              <div data-filter=".application" class="cbp-filter-item"> Application </div>
             </div>
-          </div> -->
+          </div>
           <div class="col-md-12"> 
             <!--Grid Container-->
             <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-white.png"> 
               <!--Project 1-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio1.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item game"> <a href="ajax/portfolio1.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -207,7 +206,7 @@
                 </a> </div>
               <!--/ Project 1--> 
               <!--Project 2-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio2.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item application"> <a href="ajax/portfolio2.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/2.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -220,7 +219,7 @@
                 </a> </div>
               <!--/ Project 2--> 
               <!--Project 3-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio3.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item application"> <a href="ajax/portfolio3.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/3.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -233,7 +232,7 @@
                 </a> </div>
               <!--/ Project 3--> 
               <!--Project 4-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio4.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item game"> <a href="ajax/portfolio4.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/4.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -246,7 +245,7 @@
                 </a> </div>
               <!--/ Project 4--> 
               <!--Project 5-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio5.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item application"> <a href="ajax/portfolio5.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/5.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -259,7 +258,7 @@
                 </a> </div>
               <!--/ Project 5--> 
               <!--Project 6-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio6.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item game"> <a href="ajax/portfolio6.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/6.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -272,7 +271,7 @@
                 </a> </div>
               <!--/ Project 6--> 
               <!--Project 7-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item game"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -285,7 +284,7 @@
                 </a> </div>
               <!--/ Project 7--> 
               <!--Project 8-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item application"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/8.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -298,7 +297,7 @@
                 </a> </div>
               <!--/ Project 8--> 
               <!--Project 9-->
-                <div class="cbp-item graphic web-design"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-item application"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
                   <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/9.jpg" alt=""> </div>
                   <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignLeft">
