--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!--Section Title-->
             <div class="heading wow fadeIn" data-wow-delay=".2s" data-wow-duration="1s">
               <div class="title-style-3">
-                <h2 class="text-uppercase"> About</h2>
+                <h2 class="text-uppercase"> About Me</h2>
                 <span class="title-spt"></span> </div>
               <p>Hi, my name is Jordan. I’m full stack web developer who enjoys building products and applications while feeding my appetite for creativity.  I have 5 years of professional experience in finance, and 8 years in managing a small business, where I have developed experience that I can transition into tech such as: the ability to analyze and create solutions, make decisions, collaborate with others, and manage projects.</p>
               
@@ -271,7 +271,7 @@
                 </a> </div>
               <!--/ Project 6--> 
               <!--Project 7-->
-              <div class="cbp-item game"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
+              <!-- <div class="cbp-item game"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -281,10 +281,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div>
+                </a> </div> -->
               <!--/ Project 7--> 
               <!--Project 8-->
-              <div class="cbp-item application"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
+              <!-- <div class="cbp-item application"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/8.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -294,10 +294,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div>
+                </a> </div> -->
               <!--/ Project 8--> 
               <!--Project 9-->
-                <div class="cbp-item application"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
+                <!-- <div class="cbp-item application"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
                   <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/9.jpg" alt=""> </div>
                   <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignLeft">
@@ -307,7 +307,7 @@
                       </div>
                     </div>
                   </div>
-                  </a> </div>                
+                  </a> </div>                 -->
               <!--/ Project 9--> 
             </div>
             
