--- a/ajax/loadMore-3.html
+++ b/ajax/loadMore-3.html
@@ -1,46 +1,46 @@
 <div class="cbp-loadMore-block1">
 
               <!--Project 1-->
-              <div class="cbp-item graphic identity"> <a href="ajax/ajax-page-single-image.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
+              <div class="cbp-item game"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Soul Digital</div>
-                      <div class="cbp-l-caption-desc">Ajax Page Single Image</div>
+                      <div class="cbp-l-caption-title">Hangman</div>
+                      <div class="cbp-l-caption-desc">Game of Thrones Style!</div>
                     </div>
                   </div>
                 </div>
                 </a> </div>
               <!--/ Project 1--> 
               <!--Project 2-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-image-slider.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/2.jpg" alt=""> </div>
+              <div class="cbp-item application"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/8.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">JJ Royal</div>
-                      <div class="cbp-l-caption-desc">Ajax Page Slider</div>
+                      <div class="cbp-l-caption-title">Beer-Ner</div>
+                      <div class="cbp-l-caption-desc">Choose your Booze</div>
                     </div>
                   </div>
                 </div>
                 </a> </div>
               <!--/ Project 2--> 
               <!--Project 3-->
-              <div class="cbp-item identity web-design">  <a href="ajax/ajax-page-single-video.html" class="cbp-caption cbp-singlePage">
-                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/3.jpg" alt=""> </div>
+              <div class="cbp-item application"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/9.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Yolo Glass</div>
-                      <div class="cbp-l-caption-desc">Ajax Page Video</div>
+                      <div class="cbp-l-caption-title">Bamazon</div>
+                      <div class="cbp-l-caption-desc">Node.js/MySQL CLI Application</div>
                     </div>
                   </div>
                 </div>
-                </a> </div>
+                </a> </div>                
               <!--/ Project 3--> 
-              <!--Project 4-->
-              <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-single-sound.html" class="cbp-caption cbp-singlePage">
+              <!-- Project 4-->
+              <!-- <div class="cbp-item graphic web-design"> <a href="ajax/ajax-page-single-sound.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/4.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -50,10 +50,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div>
+                </a> </div> -->
               <!--/ Project 4--> 
               <!--Project 5-->
-              <div class="cbp-item identity web-design"> <a href="ajax/big/5-big.jpg" class="cbp-caption cbp-lightbox">
+              <!-- <div class="cbp-item identity web-design"> <a href="ajax/big/5-big.jpg" class="cbp-caption cbp-lightbox">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/5.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -63,10 +63,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div>
+                </a> </div> -->
               <!--/ Project 5--> 
               <!--Project 6-->
-              <div class="cbp-item graphic web-design"> <a href="http://vimeo.com/14912890" class="cbp-caption cbp-lightbox">
+              <!-- <div class="cbp-item graphic web-design"> <a href="http://vimeo.com/14912890" class="cbp-caption cbp-lightbox">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/6.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -76,10 +76,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div>
+                </a> </div> -->
               <!--/ Project 6--> 
               <!--Project 7-->
-              <div class="cbp-item identity web-design"> <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/4900333&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" class="cbp-caption cbp-lightbox">
+              <!-- <div class="cbp-item identity web-design"> <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/4900333&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" class="cbp-caption cbp-lightbox">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -89,7 +89,7 @@
                     </div>
                   </div>
                 </div>
-                </a> </div>
-              <!--/ Project 7--> 
+                </a> </div> -->
+              <!--/ Project 7  -->
            
 </div>
