--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                      <div class="cbp-l-caption-title">Giphy Gifs</div>
+                      <div class="cbp-l-caption-title">Comic Book Gifs!</div>
                       <div class="cbp-l-caption-desc">Bootstrap/Giphy API Web Application</div>
                     </div>
                   </div>
