--- a/ajax/portfolio3.html
+++ b/ajax/portfolio3.html
@@ -1,16 +1,16 @@
-<div class="cbp-l-project-title">maxVal</div>
-<div class="cbp-l-project-subtitle">Full Stack MERN Application</div>
+<div class="cbp-l-project-title">Comic Book Gifs!</div>
+<div class="cbp-l-project-subtitle">Bootstrap/Giphy API Web Application</div>
 
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/1.PNG" alt="img"> 
+            <img src="ajax/portfolio/giphygifs/1.PNG" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/2.PNG" alt="img"> 
+            <img src="ajax/portfolio/giphygifs/2.PNG" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/3.PNG" alt="img"> 
+            <img src="ajax/portfolio/giphygifs/3.PNG" alt="img"> 
         </li>
     </ul>
 </div>
@@ -19,19 +19,17 @@
     <div class="cbp-l-project-desc">
         <div class="cbp-l-project-desc-title"><span>Description</span></div>
         <div class="cbp-l-project-desc-text"> 
-            <p>A premier crowdsourced product valuation application for modern market research. maXval enables individuals and companies of any size to quickly evaluate their products in a simple and approachable platform. </p>
-            <p>Users are able to upload photos of their products, which are then rated based on other user's input. The ratings are stored in the database and are used to populate the product dashboard.</p> 
-            <p>This application was designed using React.js on the front-end and MongoDB, node.js, and express.js on the back-end.  The user authentication was built using Firebase, and charts.js was utilized to create the data visualization.</p>  
+            <p>Comic Book Gifs! is an application that generates GIFs based on user input.  AJAX calls are made to the Giphy API when buttons are pressed, and the GIFs are dynamically generated using jQuery.</p>
         </div>
     </div>
     <div class="cbp-l-project-details">
         <div class="cbp-l-project-details-title"><span>Details</span></div>
 
         <ul class="cbp-l-project-details-list">
-            <li><strong>Technologies</strong>React.js, MongoDB, node.js, express.js, HTML, CSS, Javascript, charts.js, Firebase</li>
-            <li><strong>Date Created</strong>January 2018</li>
+            <li><strong>Technologies</strong>Bootstrap, AJAX, RESTful, APIs, HTML, CSS, Javascript, jQuery</li>
+            <li><strong>Date Created</strong>September 2017</li>
         </ul>
-        <a href="http://maxval.herokuapp.com/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
+        <a href="https://jordanlapid.github.io/GiphyGifs/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
     </div>
 </div>
 <!-- 
