--- a/ajax/portfolio8.html
+++ b/ajax/portfolio8.html
@@ -27,7 +27,7 @@
         <div class="cbp-l-project-details-title"><span>Details</span></div>
 
         <ul class="cbp-l-project-details-list">
-            <li><strong>Technologies</strong>HTML, CSS, Javascript, jQuery, Bootstrap, Materialize, Firebase, yummlyAPI, punkAPI</li>
+            <li><strong>Technologies</strong>HTML, CSS, Javascript, jQuery, Bootstrap, Materialize, Firebase, RESTful APIs, AJAX</li>
             <li><strong>Date Created</strong>September 2017</li>
         </ul>
         <a href="https://jordanlapid.github.io/Project1/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
