adding clickygame to portfolio

--- a/ajax/portfolio4.html
+++ b/ajax/portfolio4.html
@@ -1,16 +1,16 @@
-<div class="cbp-l-project-title">maxVal</div>
-<div class="cbp-l-project-subtitle">Full Stack MERN Application</div>
+<div class="cbp-l-project-title">Clicky Game!</div>
+<div class="cbp-l-project-subtitle">A Memorization Game in React</div>
 
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/1.PNG" alt="img"> 
+            <img src="ajax/portfolio/clickygame/1.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/2.PNG" alt="img"> 
+            <img src="ajax/portfolio/clickygame/2.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/3.PNG" alt="img"> 
+            <img src="ajax/portfolio/clickygame/3.png" alt="img"> 
         </li>
     </ul>
 </div>
@@ -19,19 +19,18 @@
     <div class="cbp-l-project-desc">
         <div class="cbp-l-project-desc-title"><span>Description</span></div>
         <div class="cbp-l-project-desc-text"> 
-            <p>A premier crowdsourced product valuation application for modern market research. maXval enables individuals and companies of any size to quickly evaluate their products in a simple and approachable platform. </p>
-            <p>Users are able to upload photos of their products, which are then rated based on other user's input. The ratings are stored in the database and are used to populate the product dashboard.</p> 
-            <p>This application was designed using React.js on the front-end and MongoDB, node.js, and express.js on the back-end.  The user authentication was built using Firebase, and charts.js was utilized to create the data visualization.</p>  
+            <p>Clicky Game is a game designed to test your memory!  The object of the game is to click all the pictures without clicking the same one twice.</p>
+            <p>The app was built using React for the UI, javascript for the logic and was deployed on Heroku.</p>
         </div>
     </div>
     <div class="cbp-l-project-details">
         <div class="cbp-l-project-details-title"><span>Details</span></div>
 
         <ul class="cbp-l-project-details-list">
-            <li><strong>Technologies</strong>React.js, MongoDB, node.js, express.js, HTML, CSS, Javascript, charts.js, Firebase</li>
-            <li><strong>Date Created</strong>January 2018</li>
+            <li><strong>Technologies</strong>React.js, Javascript, HTML, CSS, Heroku</li>
+            <li><strong>Date Created</strong>December 2017</li>
         </ul>
-        <a href="http://maxval.herokuapp.com/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
+        <a href="https://the-clicky-game.herokuapp.com/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
     </div>
 </div>
 <!-- 
