--- a/ajax/portfolio6.html
+++ b/ajax/portfolio6.html
@@ -1,19 +1,19 @@
-<div class="cbp-l-project-title">Bamazon</div>
-<div class="cbp-l-project-subtitle">Node.js/MySQL CLI Application</div>
+<div class="cbp-l-project-title">Nick Trivia</div>
+<div class="cbp-l-project-subtitle">Mobile Responsive Trivia Game</div>
 
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/1.PNG" alt="img"> 
+            <img src="ajax/portfolio/triviagame/1.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/2.PNG" alt="img"> 
+            <img src="ajax/portfolio/triviagame/2.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/3.PNG" alt="img"> 
+            <img src="ajax/portfolio/triviagame/3.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/4.PNG" alt="img"> 
+            <img src="ajax/portfolio/triviagame/4.png" alt="img"> 
         </li>
     </ul>
 </div>
@@ -22,18 +22,17 @@
     <div class="cbp-l-project-desc">
         <div class="cbp-l-project-desc-title"><span>Description</span></div>
         <div class="cbp-l-project-desc-text"> 
-            <p>Bamazon is an app that uses the command line interface to track inventory and allows a user to purchase items, which decreases the inventory and gives a total prices to the user. </p>
-            <p>This app was built using node.js and uses inquirer module to prompt the questions.  mySQL is used to store and update the inventory data based on user input. </p>
+            <p>Nick Trivia is a game designed to test your "Golden-Age" Nickelodeon knowledge. The player has 15 seconds to answer each question, and the correct answer is displayed after a choice is made.  Score is kept throughout the game is displayed at the end! </p>
         </div>
     </div>
     <div class="cbp-l-project-details">
         <div class="cbp-l-project-details-title"><span>Details</span></div>
 
         <ul class="cbp-l-project-details-list">
-            <li><strong>Technologies</strong>Node.js, mySQL</li>
-            <li><strong>Date Created</strong>October 2017</li>
+            <li><strong>Technologies</strong>HTML, CSS, Javascript, jQuery, Bootstrap</li>
+            <li><strong>Date Created</strong>September 2017</li>
         </ul>
-        <a href="https://github.com/jordanlapid/Bamazon" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Link to Project</a>
+        <a href="https://jordanlapid.github.io/TriviaGame/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
     </div>
 </div>
 
