adding gangnam style

--- a/ajax/portfolio7.html
+++ b/ajax/portfolio7.html
@@ -1,19 +1,16 @@
-<div class="cbp-l-project-title">Bamazon</div>
-<div class="cbp-l-project-subtitle">Node.js/MySQL CLI Application</div>
+<div class="cbp-l-project-title">Hangman</div>
+<div class="cbp-l-project-subtitle">Game of Thrones Style!</div>
 
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/1.PNG" alt="img"> 
+            <img src="ajax/portfolio/hangman/1.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/2.PNG" alt="img"> 
+            <img src="ajax/portfolio/hangman/2.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/3.PNG" alt="img"> 
-        </li>
-        <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bamazon/4.PNG" alt="img"> 
+            <img src="ajax/portfolio/hangman/3.png" alt="img"> 
         </li>
     </ul>
 </div>
@@ -22,18 +19,18 @@
     <div class="cbp-l-project-desc">
         <div class="cbp-l-project-desc-title"><span>Description</span></div>
         <div class="cbp-l-project-desc-text"> 
-            <p>Bamazon is an app that uses the command line interface to track inventory and allows a user to purchase items, which decreases the inventory and gives a total prices to the user. </p>
-            <p>This app was built using node.js and uses inquirer module to prompt the questions.  mySQL is used to store and update the inventory data based on user input. </p>
+            <p>A "Game of Thrones" themed Hangman Game. Music has been added for the extra effect. Guessing the correct word results in a glorious change in style...</p>
+            <p>Pro Tip: Use the console if get stuck.</p>
         </div>
     </div>
     <div class="cbp-l-project-details">
         <div class="cbp-l-project-details-title"><span>Details</span></div>
 
         <ul class="cbp-l-project-details-list">
-            <li><strong>Technologies</strong>Node.js, mySQL</li>
-            <li><strong>Date Created</strong>October 2017</li>
+            <li><strong>Technologies</strong>HTML, CSS, Javascript</li>
+            <li><strong>Date Created</strong>August 2017</li>
         </ul>
-        <a href="https://github.com/jordanlapid/Bamazon" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Link to Project</a>
+        <a href="https://jordanlapid.github.io/Hangman-Game/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
     </div>
 </div>
 
