--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul class="nav navbar-nav">
             <li class="active home"><a href="#home">Home</a></li>
             <li><a href="#about-us">About</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#portfolio">Samples</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -105,7 +105,7 @@
               <!-- <p> <span id="js-rotating" data-animation="rotateInDownLeft">Full Stack, Web, Software, Javascript</span><span> Developer</span> </p> -->
               <p>Web Developer</p>
               <a href="#about-us" class="btn-bdr move marT50">About Me</a>
-              <a href="#portfolio" class="btn-bdr move marT50">Portfolio</a>
+              <a href="#portfolio" class="btn-bdr move marT50">Samples</a>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
             <!--Section Title-->
             <div class="heading wow fadeIn" data-wow-delay=".2s" data-wow-duration="1s">
               <div class="title-style-3">
-                <h2 class="text-uppercase"> Portfolio</h2>
+                <h2 class="text-uppercase"> Samples</h2>
                 <span class="title-spt"></span> </div>
             </div>
             <!--/Section Title--> 
